# financetracker

./: .gitignore  .gitlab-ci.yaml  .isort.cfg  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  raport.csv  requirements.txt  settings.py  setup.cfg  urls.py
accounts/: factories.py  views.py
categories/: factories.py  forms.py  models.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_auto_20200927_1415.py
categories/tests/: test_add.py  test_delete.py  test_details.py  test_edit.py  test_list.py
expense/: factories.py  filters.py  forms.py  models.py  urls.py  views.py
expense/migrations/: 0001_initial.py  0002_auto_20200901_2147.py
expense/tests/: test_add.py  test_delete.py  test_details.py  test_edit.py  test_list.py
price_scraper/: admin.py  apps.py  celery.py  models.py  tasks.py  urls.py  views.py
price_scraper/migrations/: 0001_initial.py  0002_auto_20200817_1311.py
templates/: add_category.html  add_expanse.html  base.html  categories_list.html  category_detail.html  chart_tab.html  charts.html  expanse_detail.html  expanses_list.html  index.html  pie_chart.html
templates/categories/: category_detail.html  category_form.html  category_list.html
templates/expense/: expense_detail.html  expense_form.html  expense_list.html
templates/price_scraper/: price_list.html
templates/tracker/: expense_detail.html  expense_list.html
tracker/: __init__.py  admin.py  celery.py  factories.py  forms.py  models.py  tasks.py  tests.py  urls.py  views.py
tracker/migrations/: 0001_initial.py  (+2 more)
utils/: exceptions.py
(+1 files in other folders)
